Fixing some alignment on skip link

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -77,8 +77,8 @@ button:hover, button:focus {
     color: #fff;
 }
 .buttonSkipLink {
-    margin: 0 auto;
-    /*position: absolute;*/
+    /*margin: 0 auto;
+    position: absolute;*/
     z-index: 20;
     /*left: 0;
     right: 0;
